--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "require": {
         "php": "^7.4 || ^8.0",
         "guzzlehttp/guzzle": "^6.5.0|^7.4.2",
-        "nesbot/carbon": "2.x-dev"
+        "nesbot/carbon": "^2.0"
     },
     "license": "MIT",
     "autoload": {
